# ean-ml1

./: .gitignore  README.md  pyproject.toml
code/: 1-carga-transformacion.ipynb  2-preprocessing.ipynb  4-classification-experiments.ipynb  classification-project.ipynb  first-test.ipynb
