[tool.poetry]
name = "project1"
version = "0.0.1"
description = "First Ml1 project"
authors = ["Sergio Rojas"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
plotly = "^5.24.1"
ucimlrepo = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
